--- a/app/design/frontend/rentabag/default/layout/sales.xml
+++ b/app/design/frontend/rentabag/default/layout/sales.xml
@@ -93,7 +93,8 @@ Customer account home dashboard layout
                 <block type="sales/order_info_buttons" as="buttons" name="sales.order.info.buttons" />
             </block>
             <block type="sales/order_view" name="sales.order.view">
-                <block type="sales/order_items" name="order_items" template="sales/order/items.phtml">
+                <!--<block type="sales/order_items" name="order_items" template="sales/order/items.phtml">-->
+                <block type="advreservation/order_items" name="order_items" template="sales/order/items.phtml">
                     <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
                     <action method="addItemRender"><type>grouped</type><block>sales/order_item_renderer_grouped</block><template>sales/order/items/renderer/default.phtml</template></action>
                     <block type="sales/order_totals" name="order_totals" template="sales/order/totals.phtml">
