--- a/app/design/frontend/rentabag/default/layout/sales.xml
+++ b/app/design/frontend/rentabag/default/layout/sales.xml
@@ -93,6 +93,7 @@ Customer account home dashboard layout
                 <block type="sales/order_info_buttons" as="buttons" name="sales.order.info.buttons" />
             </block>
             <block type="sales/order_view" name="sales.order.view">
+                <!-- Vlasakh -->
                 <!--<block type="sales/order_items" name="order_items" template="sales/order/items.phtml">-->
                 <block type="advreservation/order_items" name="order_items" template="sales/order/items.phtml">
                     <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
@@ -530,4 +531,5 @@ Guest
             <action method="addLinkBlock"><blockName>return_link</blockName></action>
         </reference>
     </default>
+
 </layout>
