--- a/app/design/adminhtml/default/rentabag/template/sales/order/view/items.phtml
+++ b/app/design/adminhtml/default/rentabag/template/sales/order/view/items.phtml
@@ -1,32 +1,9 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     default_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @author Vlasakh
  */
 ?>
-<script type="text/javascript">
- 0||console.log( 'here', 22 );
-</script>
+
 <?php $_order = $this->getOrder() ?>
 <div class="grid np">
   <div class="hor-scroll">
@@ -60,7 +37,6 @@
         <?php $i=0;foreach ($_items as $_item):?>
             <?php if ($_item->getParentItem()) continue; else $i++;?>
             <tbody class="<?php echo $i%2?'even':'odd' ?>">
-                <?php $_item->test = "hello" ?>
                 <?php echo $this->getItemHtml($_item, $_items) ?>
                 <?php echo $this->getItemExtraInfoHtml($_item) ?>
             </tbody>
