Наконец заработала форма

--- a/app/design/frontend/rentabag/default/template/sales/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items.phtml
@@ -6,6 +6,9 @@
  */
 ?>
 <?php  list($_order, $pledges) = $this->getOrder() ?>
+<script type="text/javascript">
+    0||console.log( '<?= $this->getSagePayPledgeForm() ?>' );
+</script>
 <table class="data-table linearize-table-large" id="my-orders-table" summary="<?php echo $this->__('Items Ordered') ?>">
     <col />
     <col width="1" />
