--- a/app/design/frontend/rentabag/default/template/sales/order/items/renderer/default.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items/renderer/default.phtml
@@ -7,8 +7,10 @@
 ?>
 
 <?php $_item = $this->getItem() ?>
+<?php $Item = $this->getOrderItem(); ?>
+<?php $Item = Mage::getModel('catalog/product')->setStoreId($Item->getStoreId())->load($Item->getProductId()); ?>
 <tr class="border" id="order-item-row-<?php echo $_item->getId() ?>">
-    <td><h3 class="product-name"><?php echo $this->escapeHtml($_item->getName()) ?></h3>
+    <td><h3 class="product-name"><a href="<?= $Item->getProductUrl() ?>"><?php echo $this->escapeHtml($_item->getName()) ?></a></h3>
         <?php if($_options = $this->getItemOptions()): ?>
         <dl class="item-options">
         <?php foreach ($_options as $_option) : ?>
