Убрал выборку в getProdPlege и передал в модель

--- a/app/design/frontend/rentabag/default/template/sales/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items.phtml
@@ -37,7 +37,7 @@
                 <tr class="pledge">
                     <td colspan="5">
                         <div>
-                            <form action="https://test.sagepay.com/gateway/service/vspform-register.vsp" method="post" class="l-frm-pledge" target="_blank">
+                            <form action="https://test.sagepay.com/gateway/service/vspform-register.vsp" method="post" class="l-frm-pledge" target="">
                                 <?php
                                 foreach ($this->getSagePayPledgeFormData($_order, $pledges[$id])['data'] as $key => $value) {
                                     ?>
