--- a/src/scss/inc/_common.scss
+++ b/src/scss/inc/_common.scss
@@ -2,4 +2,10 @@
     border: 0; border-radius: 5px; box-shadow: inset 0 -9px 25px -8px rgba(0, 0, 0, 0.5); text-align: center;
     font-family: "Helvetica Neue", Verdana, Arial, sans-serif; text-transform: uppercase; vertical-align: middle; white-space: nowrap;
     transition: 0.2s ease;
+  &:hover { background: #C11747; }
+}
+a.btn-01 { line-height: 27px;
+  &:focus { color: #fff; }
+  &:active { color: #fff; box-shadow: inset 0 9px 25px -8px black; }
+  &:hover { color: #fff; text-decoration: none; }
 }
