--- a/app/design/adminhtml/default/rentabag/template/sales/order/view/items/renderer/default.phtml
+++ b/app/design/adminhtml/default/rentabag/template/sales/order/view/items/renderer/default.phtml
@@ -249,9 +249,11 @@
     <td class="a-right last">
         <span class="price">
             <?php if( $this->getData()['rent'][$_item->getData()["product_id"]]["price"] > 0 ): ?>
-                &pound;<?= $this->getData()['rent'][$_item->getData()["product_id"]]["price"] ?>
+                <span style="color: green;">Payed </span>&pound;<b><?= $this->getData()['rent'][$_item->getData()["product_id"]]["price"] ?></b>
+                <br />
+                <i title="pledge payment date"><?= $this->getData()['rent'][$_item->getData()["product_id"]]["pldate"] ?></i>
             <?php else: ?>
-                <i>not payed</i>
+                <i style="color: red;">not payed</i>
             <?php endif; ?>
         </span>
     </td>
