--- a/app/design/frontend/rentabag/default/layout/sales.xml
+++ b/app/design/frontend/rentabag/default/layout/sales.xml
@@ -96,6 +96,7 @@ Customer account home dashboard layout
                 <!-- Vlasakh -->
                 <!--<block type="sales/order_items" name="order_items" template="sales/order/items.phtml">-->
                 <block type="advreservation/order_items" name="order_items" template="sales/order/items.phtml">
+                    <action method="setCacheLifetime" />
                     <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
                     <action method="addItemRender"><type>grouped</type><block>sales/order_item_renderer_grouped</block><template>sales/order/items/renderer/default.phtml</template></action>
                     <block type="sales/order_totals" name="order_totals" template="sales/order/totals.phtml">
