--- a/app/design/frontend/rentabag/default/template/sales/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items.phtml
@@ -33,6 +33,11 @@
         <tbody>
             <?php echo $this->getItemHtml($_item) ?>
             <?php // Pledge payment form
+                $s1 = '$pledges='.var_export($pledges, 1)."\n";
+                0||$notpr||file_put_contents($_SERVER['DOCUMENT_ROOT'] . '/11/file', "\n--------------------\n".date("H:i:s")."\n".$s1, 0);//FILE_APPEND
+//            0||$notpr||print  "<pre> \$pledges :".$s1
+//                  .$s1 . print_r($pledges, 1)."\n"
+//                  ."</pre>";$notpr;
                 if( is_array($pledges[$id = $_item->getProductId()]) && !($pledges[$id]['price'] > 0) && $pledges[$id]['pledge'] > 0 && !$pledges[$id]['expired'] && !$pledges[$id]['greaterT7'] ): ?>
                 <?php $flag = true ?>
                 <tr class="pledge">
