подправил стили invoice emails

--- a/app/locale/en_US/template/email/sales/invoice_update_guest.html
+++ b/app/locale/en_US/template/email/sales/invoice_update_guest.html
@@ -15,10 +15,10 @@
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
     <tr>
         <td>
-            <table cellpadding="0" cellspacing="0" border="0">
+            <table cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
                 <tr>
                     <td class="action-content">
                         <h1>{{htmlescape var=$billing.getName()}},</h1>
