--- a/app/design/frontend/rentabag/default/template/email/order/shipment/items.phtml
+++ b/app/design/frontend/rentabag/default/template/email/order/shipment/items.phtml
@@ -32,7 +32,7 @@
 
     <?php $_items     = $_order->getAllItems() ?>
     <?php $_itemCount = count($_items) ?>
-    <table class="items" cellpadding="0" cellspacing="0" border="0" style="width: 100%; border: 2px solid #ccc; border-radius: 5px;">
+    <table class="items" cellpadding="0" cellspacing="0" border="0" style="width: 100%; border: 2px solid #ccc; border-bottom: 1px solid #ccc; border-radius: 5px;">
         <thead>
         <tr>
             <th class="cell-name" style="padding: 15px 10px; border-bottom: 1px solid #dcdcdc; background-color: #cccccc;">
