--- a/app/design/adminhtml/default/rentabag/template/sales/order/view/items.phtml
+++ b/app/design/adminhtml/default/rentabag/template/sales/order/view/items.phtml
@@ -30,7 +30,7 @@
                 <th><span class="nobr"><?php echo $this->helper('sales')->__('Tax Percent') ?></span></th>
                 <th><span class="nobr"><?php echo $this->helper('sales')->__('Discount Amount') ?></span></th>
                 <th><span class="nobr"><?php echo $this->helper('sales')->__('Row Total') ?></span></th>
-                <th class="last"><span class="nobr">Pledge</span></th>
+                <th class="last"><span class="nobr">Deposit</span></th>
             </tr>
         </thead>
         <?php $_items = $this->getItemsCollection() ?>
