--- a/app/design/adminhtml/default/rentabag/template/sales/order/view/items/renderer/default.phtml
+++ b/app/design/adminhtml/default/rentabag/template/sales/order/view/items/renderer/default.phtml
@@ -248,7 +248,7 @@
             <?php if( $this->getData()['rent'][$_item->getData()["product_id"]]["price"] > 0 ): ?>
                 <span style="color: green;">Payed </span>&pound;<b><?= $this->getData()['rent'][$_item->getData()["product_id"]]["price"] ?></b>
                 <br />
-                <i title="pledge payment date"><?= $this->getData()['rent'][$_item->getData()["product_id"]]["pldate"] ?></i>
+                <i title="deposit payment date"><?= $this->getData()['rent'][$_item->getData()["product_id"]]["pldate"] ?></i>
             <?php else: ?>
                 <i style="color: red;">not payed</i>
                 <br />
