--- a/app/design/frontend/rentabag/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/rentabag/default/template/catalog/product/view.phtml
@@ -64,7 +64,7 @@
                 <div class="price-info">
                     <?php echo $this->getPriceHtml($_product); ?>
                     <?php if( ($pledge = $this->getPledgePrice()) > 0 ): ?>
-                        <span class="pledge">Pledge: <span class="price">&pound;<?= sprintf("%01.2f", (float)$pledge); ?></span></span>
+                        <span class="pledge">Deposit: <span class="price">&pound;<?= sprintf("%01.2f", (float)$pledge); ?></span></span>
                     <?php endif; ?>
                     <?php echo $this->getChildHtml('bundle_prices') ?>
                     <?php echo $this->getTierPriceHtml() ?>
