--- a/src/scss/rentabag/_checkout.scss
+++ b/src/scss/rentabag/_checkout.scss
@@ -26,3 +26,26 @@ body.checkout-onepage-index{
 	@include border-left;
   }
 }
+.opc{
+	&>li{  position: relative;  }
+	li#opc-review button.button{  float: none !important;  }
+	.buttons-set{  text-align: center;
+		button.button{
+			min-width: 180px;
+			height: 40px;
+			float: none;
+			background: #fb1c5b !important;
+			@media (max-width: 700px){  float: right;  margin-right: 10px;  }
+		}
+	}
+	.please-wait{  float: left;  margin-right: -170px;
+		@media (max-width: 700px) {  margin-right: 0;  }
+	}
+	.back-link{
+		a{  padding: 5px 0;  }
+		@media (max-width: 700px){  display: block;  position: absolute;  top: 0;  right: 0;
+			a{  padding-right: 10px;  }
+		}
+	}
+	#review-buttons-container .f-left{  float: none;  width: 100%;  text-align: right;  }
+}
