--- a/app/design/frontend/default/iphone/template/bundle/sales/order/items/renderer.phtml
+++ b/app/design/frontend/default/iphone/template/bundle/sales/order/items/renderer.phtml
@@ -65,8 +65,8 @@
         </tr>
     <?php endif; ?>
     <tr>
-        <th><?php echo $this->__('SKU') ?></th>
-        <td><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($_item->getSku())) ?></td>
+<!--        <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
+<!--        <td>--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($_item->getSku())) ?><!--</td>-->
     </tr>
 
     <?php if (!$_item->getParentItem()): ?>
