--- a/app/design/frontend/default/iphone/template/sales/order/creditmemo/items/renderer/default.phtml
+++ b/app/design/frontend/default/iphone/template/sales/order/creditmemo/items/renderer/default.phtml
@@ -64,8 +64,8 @@
     </td>
 </tr>
 <tr>
-    <th><?php echo $this->__('SKU') ?></th>
-    <td><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?></td>
+<!--    <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
+<!--    <td>--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?><!--</td>-->
 </tr>
 <th class="a-right"><?php echo $this->__('Price') ?></th>
 <td class="a-right">
