--- a/app/design/frontend/rentabag/default/template/sales/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items.phtml
@@ -16,7 +16,7 @@
     <thead>
         <tr>
             <th><?php echo $this->__('Product') ?></th>
-            <th><?php echo $this->__('SKU') ?></th>
+<!--            <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
             <th class="a-right"><?php echo $this->__('Price') ?></th>
             <th class="a-center"><?php echo $this->__('Qty') ?></th>
             <th class="a-right"><?php echo $this->__('Subtotal') ?></th>
