--- a/app/design/frontend/rwd/default/template/sales/order/invoice/items.phtml
+++ b/app/design/frontend/rwd/default/template/sales/order/invoice/items.phtml
@@ -38,7 +38,7 @@
         <thead>
         <tr>
             <th><?php echo $this->__('Product Name') ?></th>
-            <th><?php echo $this->__('SKU') ?></th>
+<!--            <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
             <th class="a-right" data-rwd-label="<?php echo $this->__('Price') ?>"><?php echo $this->__('Price') ?></th>
             <th class="a-center" data-rwd-label="<?php echo $this->__('Qty Invoiced') ?>"><span class="nobr"><?php echo $this->__('Qty Invoiced') ?></span></th>
             <th class="a-right" data-rwd-label="<?php echo $this->__('Subtotal') ?>"><?php echo $this->__('Subtotal') ?></th>
