--- a/src/scss/rentabag/_single-product.scss
+++ b/src/scss/rentabag/_single-product.scss
@@ -19,6 +19,10 @@
 	border: none;
 }
 
+.product-pricing, .tier-prices{
+	padding-right: 0;
+}
+
 .tier-prices{
 	background-color: transparent;
 	border: none;
