--- a/app/design/frontend/base/default/template/bundle/email/order/items/creditmemo/default.phtml
+++ b/app/design/frontend/base/default/template/bundle/email/order/items/creditmemo/default.phtml
@@ -57,7 +57,7 @@
     <?php else: ?>
     <td align="left" valign="top" style="padding:3px 19px"><?php echo $this->getValueHtml($_item)?></td>
     <?php endif; ?>
-    <td align="left" valign="top" style="padding:3px 9px"><?php echo $this->escapeHtml($_item->getSku()) ?></td>
+<!--    <td align="left" valign="top" style="padding:3px 9px">--><?php //echo $this->escapeHtml($_item->getSku()) ?><!--</td>-->
     <td align="center" valign="top" style="padding:3px 9px">
         <?php if ($this->canShowPriceInfo($_item)): ?>
             <?php echo $_item->getQty()*1 ?>
