--- a/app/design/frontend/base/default/template/downloadable/sales/order/invoice/items/renderer/downloadable.phtml
+++ b/app/design/frontend/base/default/template/downloadable/sales/order/invoice/items/renderer/downloadable.phtml
@@ -70,7 +70,7 @@
                 onclick="return giftMessageToogle('<?php echo $_item->getId() ?>')"><?php echo $this->__('Gift Message') ?></a>
     <?php endif; ?>
 </td>
-<td><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?></td>
+<!--<td>--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?><!--</td>-->
 <td class="a-right nowrap">
     <?php if ($this->helper('tax')->displayCartBothPrices() || $this->helper('tax')->displayCartPriceExclTax()): ?>
     <span class="price-excl-tax">
