--- a/app/design/frontend/default/iphone/template/sales/order/items/renderer/default.phtml
+++ b/app/design/frontend/default/iphone/template/sales/order/items/renderer/default.phtml
@@ -69,8 +69,8 @@ $_options = $this->getItemOptions();
     </td>
 </tr>
 <tr>
-    <th><?php echo $this->__('SKU') ?></th>
-    <td><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?></td>
+<!--    <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
+<!--    <td>--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?><!--</td>-->
 </tr>
 <th class="a-right"><?php echo $this->__('Price') ?></th>
 <td class="a-right">
