--- a/app/design/frontend/rentabag/default/template/checkout/multishipping/addresses.phtml
+++ b/app/design/frontend/rentabag/default/template/checkout/multishipping/addresses.phtml
@@ -70,7 +70,7 @@
                 <?php if ($_item->getQuoteItem()) :?>
                     <tr>
                         <td><?php echo $this->getItemHtml($_item->getQuoteItem())?></td>
-                        <td><input type="text" data-multiship-item-id="<?php echo $this->jsQuoteEscape($_item->getSku()) ?>" name="ship[<?php echo $_index ?>][<?php echo $_item->getQuoteItemId() ?>][qty]" value="<?php echo $this->escapeHtml($_item->getQty()) ?>" size="2" class="input-text qty" /></td>
+<!--                        <td><input type="text" data-multiship-item-id="--><?php //echo $this->jsQuoteEscape($_item->getSku()) ?><!--" name="ship[--><?php //echo $_index ?><!--][--><?php //echo $_item->getQuoteItemId() ?><!--][qty]" value="--><?php //echo $this->escapeHtml($_item->getQty()) ?><!--" size="2" class="input-text qty" /></td>-->
                         <td data-rwd-label="Send To"><?php if ($_item->getProduct()->getIsVirtual()): echo $this->__('Shipping selection is not applicable.'); else: echo $this->getAddressesHtmlSelect($_item, $_index); endif; ?></td>
                         <td class="a-center"><a href="<?php echo $this->getItemDeleteUrl($_item) ?>" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>" class="btn-remove2"><?php echo $this->__('Remove Item') ?></a></td>
                     </tr>
