--- a/app/design/frontend/rentabag/default/template/wishlist/item/column/info.phtml
+++ b/app/design/frontend/rentabag/default/template/wishlist/item/column/info.phtml
@@ -32,9 +32,9 @@ $product = $item->getProduct();
     <a href="<?php echo $this->getProductUrl($item) ?>" title="<?php echo $this->escapeHtml($product->getName()) ?>"><?php echo $this->escapeHtml($product->getName()) ?></a>
 </h3>
 
-<div class="wishlist-sku">
-    <span><?php echo $this->__('SKU'); ?> <?php echo $this->escapeHtml($product->getSku()) ?></span>
-</div>
+<!--<div class="wishlist-sku">-->
+<!--    <span>--><?php //echo $this->__('SKU'); ?><!-- --><?php //echo $this->escapeHtml($product->getSku()) ?><!--</span>-->
+<!--</div>-->
 
 <!-- <div class="description std">
     <div class="inner"> -->
