--- a/app/design/frontend/rwd/default/template/bundle/email/order/items/invoice/default.phtml
+++ b/app/design/frontend/rwd/default/template/bundle/email/order/items/invoice/default.phtml
@@ -55,7 +55,7 @@
     <?php if (!$_item->getOrderItem()->getParentItem()): ?>
         <td class="bundle-item-parent product-info">
             <p class="product-name"><?php echo $this->escapeHtml($_item->getName()) ?></p>
-            <p class="sku"><?php echo $this->__('SKU'); ?>: <?php echo $this->escapeHtml($this->getSku($_item)) ?></p>
+<!--            <p class="sku">--><?php //echo $this->__('SKU'); ?><!--: --><?php //echo $this->escapeHtml($this->getSku($_item)) ?><!--</p>-->
         </td>
         <td class="bundle-item-parent align-center">
             <?php if ($this->canShowPriceInfo($_item)): ?>
