--- a/app/design/frontend/rwd/default/template/bundle/sales/order/items/renderer.phtml
+++ b/app/design/frontend/rwd/default/template/bundle/sales/order/items/renderer.phtml
@@ -44,7 +44,7 @@
     <?php if ($_prevOptionId != $attributes['option_id']): ?>
     <tr class="bundle label<?php if($_item->getLastRow()): ?> last<?php endif; ?>">
         <td><div class="option-label"><?php echo $attributes['option_label'] ?></div></td>
-        <td data-rwd-label="SKU" class="lin-hide">&nbsp;</td>
+<!--        <td data-rwd-label="SKU" class="lin-hide">&nbsp;</td>-->
         <td data-rwd-label="Price" class="lin-hide">&nbsp;</td>
         <td data-rwd-label="Qty" class="lin-hide">&nbsp;</td>
         <td data-rwd-label="Subtotal" class="lin-hide">&nbsp;</td>
@@ -59,7 +59,7 @@
     <?php else: ?>
     <td><div class="option-value"><?php echo $this->getValueHtml($_item)?></div></td>
     <?php endif; ?>
-    <td data-rwd-label="SKU"><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($_item->getSku())) ?></td>
+<!--    <td data-rwd-label="SKU">--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($_item->getSku())) ?><!--</td>-->
     <td class="a-right<?php if ($_item->getParentItem()): ?> lin-hide<?php endif; ?>" data-rwd-label="Price">
         <?php if (!$_item->getParentItem()): ?>
         <?php if ($this->helper('tax')->displaySalesBothPrices() || $this->helper('tax')->displaySalesPriceExclTax()): ?>
@@ -372,7 +372,7 @@
             <a href="#" id="order-item-gift-message-link-<?php echo $parentItem->getId() ?>" class="gift-message-link" onclick="return giftMessageToogle('<?php echo $parentItem->getId() ?>')"><?php echo Mage::helper('sales')->__('Gift Message') ?></a>
         <?php endif; ?>
     </td>
-    <td data-rwd-label="SKU">&nbsp;</td>
+<!--    <td data-rwd-label="SKU">&nbsp;</td>-->
     <td data-rwd-label="Price">&nbsp;</td>
     <td data-rwd-label="Qty">&nbsp;</td>
     <td data-rwd-label="Subtotal">&nbsp;</td>
