--- a/app/design/frontend/rwd/default/template/downloadable/checkout/cart/item/default.phtml
+++ b/app/design/frontend/rwd/default/template/downloadable/checkout/cart/item/default.phtml
@@ -55,9 +55,9 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
             href="<?php echo $this->getProductUrl() ?>"><?php echo $this->escapeHtml($this->getProductName()) ?></a>
     </h2>
 
-    <div class="product-cart-sku">
-        <span class="label"><?php echo $this->__('SKU'); ?>:</span> <?php echo $this->escapeHtml($_item->getSku()); ?>
-    </div>
+<!--    <div class="product-cart-sku">-->
+<!--        <span class="label">--><?php //echo $this->__('SKU'); ?><!--:</span> --><?php //echo $this->escapeHtml($_item->getSku()); ?>
+<!--    </div>-->
 
     <?php if ($_options = $this->getOptionList()): ?>
         <dl class="item-options">
