--- a/app/design/frontend/rwd/default/template/sales/order/creditmemo/items/renderer/default.phtml
+++ b/app/design/frontend/rwd/default/template/sales/order/creditmemo/items/renderer/default.phtml
@@ -60,7 +60,7 @@
            onclick="return giftMessageToogle('<?php echo $_item->getId() ?>')"><?php echo $this->__('Gift Message') ?></a>
     <?php endif; ?>
 </td>
-<td data-rwd-label="<?php echo $this->__('SKU') ?>"><?php echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?></td>
+<!--<td data-rwd-label="--><?php //echo $this->__('SKU') ?><!--">--><?php //echo $this->escapeHtml(Mage::helper('core/string')->splitInjection($this->getSku())) ?><!--</td>-->
 <td class="a-right" data-rwd-label="<?php echo $this->__('Price') ?>">
     <?php if ($this->helper('tax')->displaySalesBothPrices() || $this->helper('tax')->displaySalesPriceExclTax()): ?>
     <span class="price-excl-tax">
